fixed background looks weird on mobile under toolbars

--- a/tassaron_flask/static/css/base.css
+++ b/tassaron_flask/static/css/base.css
@@ -1,8 +1,13 @@
 .bg-fixed {
-    height: 100%;
-    background-size:cover;
-    background-attachment: fixed;
+    height: auto;
+    background-size: cover;
     background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 1080px) {
+    .bg-fixed {
+        background-attachment: fixed;
+    }
 }
 
 footer {
